--- a/web-frontend/public/index.html
+++ b/web-frontend/public/index.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Starter Snowpack App" />
     <link rel="stylesheet" type="text/css" href="/index.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet" />
     <title>Starter Snowpack App</title>
   </head>
   <body>
     <!-- <h1>Welcome to Snowpack!</h1> -->
-	<div id=root></div>
+    <div id="root"></div>
     <!-- <script type="module" src="/index.js"></script> -->
     <script type="module" src="/dist/index.js"></script>
   </body>
