--- a/web-frontend/public/index.html
+++ b/web-frontend/public/index.html
@@ -6,7 +6,10 @@
     <meta name="description" content="Starter Snowpack App" />
     <link rel="stylesheet" type="text/css" href="/index.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
     <title>Starter Snowpack App</title>
   </head>
   <body>
