--- a/web-frontend/public/index.html
+++ b/web-frontend/public/index.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400&family=Rubik:wght@300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
-    <title>Genimen</title>
+    <title>| Genimen</title>
   </head>
   <body>
     <!-- <h1>Welcome to Snowpack!</h1> -->
