minor changes in home page

--- a/web-frontend/public/index.html
+++ b/web-frontend/public/index.html
@@ -4,7 +4,7 @@
     <link rel="icon" href="favicon.png" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Starter Snowpack App" />
+    <meta name="description" content="Predict | Design | Analyse " />
     <link rel="stylesheet" type="text/css" href="/index.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
